2009-10-29  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/41775
	* tree-sra.c (build_ref_for_offset): Unshare *expr if not NULL.
	(generate_subtree_copies): Do not unshare agg.
	(load_assign_lhs_subreplacements): Do not unshare rhs.
	(sra_modify_assign): Do not unshare exprs.
	(propagate_subacesses_accross_link): Renamed to
	propagate_subaccesses_across_link.

	* testsuite/g++.dg/torture/pr41775.C: New testcase.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153699 138bc75d-0d04-0410-961f-82ee72b054a4